<resources>
    <string name="app_name">SCANDIT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_team_name">Enter your team name</string>
    <string name="create_team">Create your team now</string>
    <!--<string name="facebook_app_id">1778832029070080</string>-->
    <!--<string name="facebook_app_id">260931160973394</string>-->

    <!--  Facebook app id from production beta account-->
    <string name="facebook_app_id">443209589355029</string>
    <string name="profile_completeness">Profile Completeness</string>
    <string name="_25">25%</string>
    <string name="tv_sign_in">Sign In</string>
    <string name="spread_world">Spread us to world</string>
    <string name="your_teams">Your Teams</string>
    <string name="social_evening">Social Evening</string>
    <string name="error_no_selfie">Take a team selfie to proceed</string>
    <string name="error_no_profile_image">Please add your profile picture to proceed</string>
    <string name="error_no_team_name">Please select a name for your team</string>
    <string name="error_bitmap_retrieval">Unable to fetch imageUrl from storage</string>
    <string name="error_uploading_image">Some unknown error occurred while uploading the imageUrl, Please try again</string>
    <string name="error_creating_team">Some unknown error occurred while creating your team, please try again</string>
    <string name="insufficient_memory">Unable to load image due to insufficient mobile memory</string>
    <string name="skip">Skip</string>
    <string name="send_invite">Send Invite</string>
    <string name="msg_invitation_success">Invite sent successfully on selected numbers</string>
    <string name="my_teams">My Teams</string>
    <string name="font_regular">ClearSans-Regular.ttf</string>
    <string name="font_light">ClearSans-Regular.ttf</string>
    <string name="font_medium">ClearSans-Medium.ttf</string>
    <string name="font_bold">ClearSans-Bold.ttf</string>
    <string name="server_error">SERVER ERROR</string>
    <string name="msg_server_error">Oops! Something went wrong...</string>
    <string name="finding_teams">Finding other teams\nnear around you...</string>
    <string name="no_teams">No teams found near around you...\nGo ahead and create your team</string>
    <string name="challenge_fb">Facebook Challenge</string>
    <string name="select_challenge">Select a challenge</string>
    <string name="done">DONE</string>
    <string name="msg_team_joined">Congrats! you have successfully joined this team</string>
    <string name="join_team">JOIN TEAM</string>
    <string name="msg_pushNotification_sent">Challenge sent successfully to team members.</string>
    <string name="loading_contacts">Loading contacts from phone book.</string>
    <string name="challenges_received">Challenges Received</string>
    <string name="challenges_sent">Challenges Sent</string>
    <string name="no_rewards">No Rewards</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="take_a_selfie">Take your team selfie</string>
    <string name="write_team_name">Enter your team name</string>
    <string name="internet_error">Please check your internet connection</string>
    <string name="no_team_created">We have not found any team created by you.\nGo ahead and create your team</string>
    <string name="log_out">LOG OUT</string>
    <string name="item_added_to_cart">Item added to cart successfully</string>
    <string name="error_adding_item">Error adding item to cart, Please try again.</string>
    <string name="item_removed_from_cart">Item removed from cart</string>
    <string name="submit_order">Submit Order</string>
    <string name="back">Back</string>
    <string name="hint_business_name">Enter your business/shop name</string>
    <string name="hint_phone">Enter your 10 digit mobile number</string>
    <string name="error_invalid_mobile">Please enter a valid 10 digit mobile number</string>
    <string name="error_no_name">Name can not be empty</string>
    <string name="info_thanks_placing_order">Thanks for placing the orderDetail.\nYour orderDetail id is #%s</string>
    <string name="call_you_shortly">We will call you back shortly for orderDetail confirmation</string>
    <string name="contact_us">Contact us on:</string>
    <string name="mobile_no">Mobile Number :</string>
    <string name="watsapp">Whatsapp Number :</string>
    <string name="email">Email ID :</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="dealers">DEALERS DIRECTORY</string>
    <string name="chat_with_us">CHAT WITH US</string>
    <string name="no_current_order">Currently you have not placed any orderDetail.</string>
    <string name="place_an_order">Place an orderDetail now</string>
    <string name="order_id">Order ID : %s</string>
    <string name="order_amount">Order Amount : %s</string>
    <string name="order_submitted">Order Submitted : %s</string>
    <string name="check_out">CHECK OUT</string>
    <string name="amount_rs">\u20B9%s</string>
    <string name="MRP_Rs">\u20B9%s</string>
    <string name="add_profile_pic">Attach your profile pic</string>
    <string name="hint_user_name">Enter your first name*</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="your_profile_info">Your Account Information</string>
    <string name="error_no_first_name">Please enter your first name</string>
    <string name="error_unknown">Oops some unknown error occurred. Please try again!</string>
    <string name="no_product_scanned">Currently no product added to your basket.</string>
    <string name="add_to_basket">ADD TO BASKET</string>
    <string name="content">Barcode Content : %s</string>
    <string name="barcode_qty">Qty  %s</string>
    <string name="barcode_id">Barcode ID : %s</string>
    <string name="barcode_name">Barcode Name : %s</string>
    <string name="my_basket">MY BASKET</string>
    <string name="title_activity_plumber_splash">PlumberSplash</string>
    <string name="rs">\u20B9</string>
    <string name="gcm_defaultSenderId">45173470708</string>
    <string name="image_folder_name">Images</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="default_errore_msg">Field cannot be empty</string>
    <string name="invalid_phone_number">Please enter 10 digit mobile number</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="accreditation">
        <item>Select</item>
        <item>NABH</item>
        <item>NABL</item>
        <item>CAP</item>
        <item>IDA</item>
        <item>ISO</item>
        <item>IDAP</item>
    </string-array>

    <string name="sign_up">Sign Up</string>
    <string name="error_first_name_is_empty">First Name is empty</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="yes_i_agree_to_terms_of_use">Yes, I agree to Terms of Use</string>
    <string name="error_last_name_is_empty">Last name is empty</string>
    <string name="error_emil_address_is_empty">Email Address is empty</string>
    <string name="error_phone_number_empty">Phone Number is empty</string>
    <string name="error_password_empty">Password is empty</string>
    <string name="password">Password</string>
    <string name="error_password">Password must be atleast 8 characters and contain:- 1 Numeric 1 Special character 1 Capital letter</string>
    <string name="error_password_not_match">Password do not match</string>
    <string name="clinic_hospital_login">Clinic/Hospital Login</string>
    <string name="error_email_phone_empty">Email/Phone is empty</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="login">Sign In</string>
    <string name="or">- OR -</string>
    <string name="don_t_have_a_login_sign_up_and_enjoy">Don\'t have a login? Sign Up and Enjoy..</string>
    <string name="sign_up_now">Register</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="submit">Submit</string>
    <string name="error_email_empty">Field is not correct</string>
    <string name="fail">Fail</string>
    <string name="password_changed_msg">Password has changed successfully</string>
    <string name="error_fail_change_password">Fail to change the password</string>
    <string name="error_invalid_credentials">Invalid login credentials</string>
    <string name="error_invalid_otp">Please enter 6 digit OTP that we have sent on your mobile</string>
    <string name="signup">SignUp</string>
    <string name="register">Register</string>
    <string name="already_registered_login"><u>Already Registered?Login</u></string>
    <string name="resend_email">Email has been send</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="dummy_name">Dummy</string>
    <string name="patients">Patients</string>
    <string name="allpatientsv1">All Patients V1</string>
    <string name="doctor_pt">Doctor/PT</string>
    <string name="hospitals_clinics">Hospital/Clinics</string>
    <string name="communications">Communications</string>
    <string name="reports">Reports</string>
    <string name="feedback">Feedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="successfully">Successfully</string>
    <string name="success">Success</string>
    <string name="errors">Error</string>

    <string name="no_record_found">No Record Found!</string>
    <string name="delete_successfully">Delete Successfully</string>
    <string name="error">Error</string>
    <string name="_0">0%</string>

</resources>
