<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbg"
    style="@style/rl_root"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_logo">
    <include layout="@layout/layout_logo"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_below="@+id/rv_logo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp">

        <simplifii.framework.widgets.CustomTextInputLayout
        android:id="@+id/til_email"
        style="@style/text_input_layout_style1"
        android:layout_below="@+id/tv_name"
        app:emptyErrorMsg="@string/error_email_phone_empty"
            >

        <simplifii.framework.widgets.CustomFontEditText
            android:id="@+id/et_email"
            style="@style/et_black_style"

            android:drawableLeft="@mipmap/usericon"
            android:hint="@string/email_phone_number"
            android:inputType="text"
            />

    </simplifii.framework.widgets.CustomTextInputLayout>

    <simplifii.framework.widgets.CustomTextInputLayout
        android:id="@+id/til_password"
        style="@style/text_input_layout_style1"
        android:layout_below="@+id/til_email"
        app:emptyErrorMsg="@string/error_password_empty"
        >

        <simplifii.framework.widgets.CustomFontEditText
            android:id="@+id/et_password"
            style="@style/et_black_style"
            android:drawableLeft="@mipmap/passwordicon"

            android:hint="@string/password"
            android:inputType="textPassword"
            />

    </simplifii.framework.widgets.CustomTextInputLayout>


    <simplifii.framework.widgets.CustomFontButton
        android:id="@+id/bt_login"
        style="@style/button_style"
        android:layout_marginTop="@dimen/margin_36dp"
        android:layout_below="@+id/til_password"
        android:background="@mipmap/loginbtn"
        android:text="@string/login" />

    <simplifii.framework.widgets.CustomFontButton
        android:id="@+id/bt_sign_up"
        style="@style/button_style"
        android:layout_below="@+id/bt_login"
        android:background="@mipmap/registerbtn"
        android:text="@string/sign_up_now" />

    <simplifii.framework.widgets.CustomFontTextView
        android:id="@+id/tv_forgot_password"
        style="@style/text_view_style"
        android:layout_below="@+id/bt_sign_up"
        android:text="@string/forgot_password"
        android:clickable="true"
         />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
