<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.justrelief.activity.HomeActivity">

    <ImageView
        style="@style/iv_logo"
        android:src="@drawable/logo"
        android:id="@+id/image"
        android:layout_centerHorizontal="true"/>

    <simplifii.framework.widgets.CustomFontTextView
        style="@style/text_view_style"
        android:text="@string/doctor_physiotherapist_login"
        android:id="@+id/tv_name"
        android:layout_below="@+id/image"
        />

    <simplifii.framework.widgets.CustomTextInputLayout
        style="@style/text_input_layout_style"
        android:id="@+id/til_email"
        android:layout_below="@+id/tv_name"
        >

        <simplifii.framework.widgets.CustomFontEditText
            style="@style/edit_text_style"
            android:drawableRight="@drawable/closeenvelope"
            android:inputType="text"
            android:id="@+id/et_email"
            android:hint="@string/email_phone_number"/>

    </simplifii.framework.widgets.CustomTextInputLayout>

    <simplifii.framework.widgets.CustomTextInputLayout
        style="@style/text_input_layout_style"
        android:id="@+id/til_password"
        android:layout_below="@+id/til_email"
        >
        <simplifii.framework.widgets.CustomFontEditText
            style="@style/edit_text_style"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:drawableRight="@drawable/padlock"
            android:hint="@string/password"/>

    </simplifii.framework.widgets.CustomTextInputLayout>


    <simplifii.framework.widgets.CustomFontButton
        style="@style/button_style"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/margin_40dp"
        android:layout_below="@+id/til_password"
        android:text="@string/login"
        android:id="@+id/bt_login"
        android:layout_alignRight="@+id/til_password"/>

    <simplifii.framework.widgets.CustomFontTextView
        style="@style/text_view_style"
        android:layout_below="@+id/bt_login"
        android:text="@string/or"
        android:id="@+id/tv_or"

        />
    <simplifii.framework.widgets.CustomFontTextView
        style="@style/text_view_style"
        android:layout_below="@+id/tv_or"
        android:text="@string/don_t_have_a_login_sign_up_and_enjoy"
        android:id="@+id/tv_sign"

        />


    <simplifii.framework.widgets.CustomFontButton
        style="@style/button_style"
        android:layout_below="@+id/tv_sign"
        android:text="@string/sign_up_now"
        android:id="@+id/bt_sign_up"
        android:layout_alignRight="@+id/til_password"/>

    <simplifii.framework.widgets.CustomFontTextView
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignBaseline="@+id/bt_login"
        android:id="@+id/tv_forgot_password" />

</RelativeLayout>
